@@ -1,6 +1,9 @@
 0.1.9
 ------------------------------------------------------------------------
-
+Updated to libraw 0.6.14: 
+ - user-specified gamma curve.                 
+ - Pentax K2000/Km support.                    
+ - Changes in Canon sRAW processing (support for 5D2 fw 1.07).
 
 0.1.8
 ------------------------------------------------------------------------
